log
Mon, May  5, 2025  3:43:54 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Mon, May  5, 2025  3:57:10 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
43330e3
Mon, May  5, 2025  4:09:30 AM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
00972a7
Mon, May  5, 2025  4:18:06 AM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:84:13: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if (lower_than(key, tree->current->pair->key))
             ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
b91aa39
